terminalDisplay/TerminalFonts: fix checking if emojiFont is set

QFont() constructs a font object that uses the application's default
font. So testing if a font is set by comparing it against QFont() is not
valid. Instead, test if the family name is empty.

BUG: 481211